fix (b, strong): gras non visible

--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -5,6 +5,9 @@ body{
 	background-image: url(/wp-content/uploads/2016/06/x-bg-maze.png);
 	background-color: transparent;
 }
+b, strong {
+    font-weight: bold;
+}
 #wrapper-navbar nav.navbar-dark{
 	/*background-image: url(http://musculationaufeminin.com/wp-content/uploads/2016/06/x-bg-maze.png);*/
 	background-color: $brand-blue!important;
